# k8s-deployments

./: .gitignore  README.md  migrations_2024_09.md
admin/: kubeconfig
admin/clusterRoles/: oidc-cluster-admin.yaml
admin/dashboard/: Chart.yaml  README.md  generate_values.sh  values.yaml  values.yaml.tpl
apps/accounts/: Chart.yaml  values.yaml
apps/assets/: Chart.yaml  values.yaml
apps/assets-gateway/: Chart.yaml  values.yaml
apps/cdn/: Chart.yaml  values.yaml
apps/cdn-apps-server/: Chart.yaml  values.yaml
apps/cdn-sessions-storage/: Chart.yaml  values.yaml
apps/files/: Chart.yaml  (+1 more)
configs/: Chart.yaml
data/: .env  Chart.yaml  Dockerfile  values.yaml
infrakube/: .gitignore  .npmignore  .prettierignore  LICENSE  README.md  package.json
infrakube/w3nest_infrakube_backend/: install.sh  pyproject.toml  start.sh
infrakube/w3nest_infrakube_backend/.w3nest/: webpm.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/: __init__.py  app.py  environment.py  k8s_names.py  main_localhost.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/: __init__.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/config_maps/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/contexts/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/ingresses/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/logs/: __init__.py  router.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/namespaces/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/nodes/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/persistent_volumes/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/secrets/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/service_accounts/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/services/: __init__.py  router.py  schemas.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/routers/w3nest/: __init__.py  clients.py  models.py  router.py
infrakube/w3nest_infrakube_backend/w3nest_infrakube_backend/scripts/: copy_data.py  import_users.py
py_w3k8s_adm/: pyproject.toml
py_w3k8s_adm/w3k8s_adm/: copy_local_data.py  delete_temp_users.py  import_users.py  k8s_utils.py  minio_client.py  webpm_stats.py
w3nest/: Chart.yaml  values.yaml
webpm/: Chart.yaml  config.yaml  docker_env  logging.yaml  values.yaml
(+281 files in other folders)
