[project]
name = "w3nest_infrakube_backend"
version = "0.1.1"
description = "Backend for the W3Lab plugin '@w3nest/infrakube'."
requires-python = "~=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115,<0.116.0",
    "uvicorn>=0.24,<0.25",
    "w3nest_client==0.1.13.dev",
    "kubernetes-asyncio==31.1.0",
    "minio>=7.1.9,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pip-audit",
    "pylint",
    "pycodestyle",
    "pydocstyle",
    "isort",
    "black[d]",
    "mypy",
    "pdoc",
    "build",
    "twine",
    "types-PyYAML"
]
[build-system]
requires = [
    "setuptools>=67.7.2",
]


[tool.setuptools.packages.find]
where = ["./"]
include = ["w3nest_infrakube_backend","w3nest_infrakube_backend.*"]
exclude = []

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-arguments",
    "too-many-positional-arguments"
]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true

[project.scripts]
run_w3nest_infrakube_backend = "w3nest_infrakube_backend.main_docker:main"

[w3nest]
default-port = 2010
